# rustyspaces-Productivity-Tool

./: .gitignore  Cargo.toml  Dockerfile  Rocket.toml  diesel.toml  flutter-build.sh  nixpacks.toml  package-lock.json  package.json  readme.md  rocket.toml  tailwind.config.js
.railway/: setup.sh
extras/database/: spaces_rows.csv  sticky_notes_rows.csv  time_tracking_sessions_rows (1).csv
extras/lib/: auth_service.dart  home_page.dart  main.dart  space_page.dart
extras/lib/components/: music_player.dart  scrolling_test.dart  starry_background.dart  sticky_notes.dart  time_tracker.dart  tri_checkbox.dart
migrations/2024-08-09-073215_create_spaces/: up.sql
migrations/2024-08-12-081303_create_sticky_notes/: up.sql
migrations/2024-08-17-140405_add_space_id_to_sticky_notes/: up.sql
migrations/2024-08-21-173232_create_time_tracking_sessions/: up.sql
migrations/2024-08-25-142822_create_spaces/: down.sql  up.sql
migrations/2024-08-25-143441_create_sticky_notes/: up.sql
migrations/2024-08-25-143919_create_time_tracking_sessions/: up.sql
migrations/2024-08-25-145307_modify_sticky_notes_structure/: down.sql  up.sql
src/: db.rs  main.rs  models.rs  schema.rs  state.rs
static/: flutter_bootstrap.js  flutter_service_worker.js  index.html  main.dart.js  output.css  script.js  style.css  version.json
static/assets/: NOTICES
templates/: backupindex.html.tera  space.html.tera
