[package]
name = "spaces"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
rocket_sync_db_pools = { version = "0.1.0", features = ["diesel_postgres_pool"] }
diesel = { version = "2.2.2", features = ["postgres", "uuid", "chrono", "serde_json"] }
rocket_dyn_templates = { version = "0.1.0", features = ["tera"] }
tera = "1.10.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.2", features = ["v4", "serde"] }
jsonwebtoken = "8.0"
dotenv = "0.15.0"
chrono = { version = "0.4", features = ["serde"] }
# rocket_cors = "0.5.0"
